--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/css.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -342,19 +342,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>CSS 3</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/css.png" class="img-responsive img-centered" alt="">
+                            <p>J'ai appris le CSS sur <a href="http://openclassroom.com>">OpenClassRoom</a> ex-site du zéro.</br>
+                            J'ai perfectionner en 3ème Technique de Transition à l'<a href="http://argembloux.be/">Athénée Royal De Gembloux</a>(ARG).
+                            Je vous propose plusieurs petits service:</br></br>
+                            &bull; Page d'accueil personnalisé - <a href="#">Exemple</a></br>
+                            &bull; Page de présentation - <a href="#">Exemple</a></br>
+                            &bull; Site WEB par CMS - <a href="#">Exemple</a></br>
+                            &bull; Site WEB - <a href="#">Exemple</a></br></br>
+                            Pout toutes commande, informations ou demande supplémentaire, contactez-moi.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
