Ajout des logos à l'html et modicition de about

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/python.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -152,7 +152,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/ps.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -164,21 +164,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>A Propos</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Bonjour;</br>
+                    Alors moi ces Alexis, j'ai 16 ans et je suis belge. Même si je ne suis pas du 21ème siècle(1999). Je suis passionné d'informatique. Et j'en ai fait    mes études et j'en ferai mon métier.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>Même si j'ai énormément appris sur le internet. J'ai un peux appris en cours, appris pas vraiment mais j'ai beacoup été aidé à améliorer mon code, mon design, ...</br>
+                    Si vous aussi, vous voulez vous lancer je vous conseille de vous rendre <a href="http://openclassroom.com">ICI</a></p>
                 </div>
             </div>
         </div>
@@ -309,7 +306,7 @@
                             <h2>HTML 5</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/html.png" class="img-responsive img-centered" alt="">
-                            <p>J'ai appris l'HTML sur <a href="http://openclassroom.com>">OpenClassRoom</a> ex-site du zéro.</br>
+                            <p>J'ai appris l'HTML sur <a href="http://openclassroom.com">OpenClassRoom</a> ex-site du zéro.</br>
                             J'ai perfectionner en 3ème Technique de Transition à l'<a href="http://argembloux.be/">Athénée Royal De Gembloux</a>(ARG).
                             Je vous propose plusieurs petits service:</br></br>
                             &bull; Page d'accueil personnalisé - <a href="#">Exemple</a></br>
@@ -380,7 +377,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/python.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -491,7 +488,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/ps.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
